[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/tilesets/menu/option-stage_0.tres" type="TileSet" id=2]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sprites/menu/selecticon.png" type="Texture" id=4]
[ext_resource path="res://scenes/effects/fade.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/se/Cursor.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/se/Select.wav" type="AudioStream" id=7]

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="tiles" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 44, 0, 1, 44, 0, 2, 44, 0, 3, 44, 0, 4, 44, 0, 5, 44, 0, 6, 44, 0, 7, 44, 0, 8, 44, 0, 9, 44, 0, 10, 44, 0, 11, 44, 0, 12, 44, 0, 13, 44, 0, 14, 44, 0, 15, 44, 0, 16, 44, 0, 17, 44, 0, 18, 44, 0, 19, 44, 0, 20, 44, 0, 21, 44, 0, 22, 44, 0, 23, 44, 0, 24, 44, 0, 25, 44, 0, 26, 44, 0, 27, 44, 0, 28, 44, 0, 29, 44, 0, 30, 44, 0, 31, 44, 0, 65536, 45, 0, 65537, 45, 0, 65538, 45, 0, 65539, 45, 0, 65540, 45, 0, 65541, 45, 0, 65542, 45, 0, 65543, 45, 0, 65544, 28, 0, 65545, 29, 0, 65546, 30, 0, 65547, 31, 0, 65548, 31, 0, 65549, 31, 0, 65550, 31, 0, 65551, 31, 0, 65552, 31, 0, 65553, 31, 0, 65554, 31, 0, 65555, 31, 0, 65556, 31, 0, 65557, 32, 0, 65558, 33, 0, 65559, 34, 0, 65560, 45, 0, 65561, 45, 0, 65562, 45, 0, 65563, 45, 0, 65564, 45, 0, 65565, 45, 0, 65566, 45, 0, 65567, 45, 0, 131072, 46, 0, 131073, 46, 0, 131074, 46, 0, 131075, 46, 0, 131076, 46, 0, 131077, 46, 0, 131078, 46, 0, 131079, 46, 0, 131080, 35, 0, 131095, 36, 0, 131096, 46, 0, 131097, 46, 0, 131098, 46, 0, 131099, 46, 0, 131100, 46, 0, 131101, 46, 0, 131102, 46, 0, 131103, 46, 0, 196608, 47, 0, 196609, 47, 0, 196610, 47, 0, 196611, 47, 0, 196612, 47, 0, 196613, 47, 0, 196614, 47, 0, 196615, 47, 0, 196616, 37, 0, 196617, 38, 0, 196618, 39, 0, 196619, 40, 0, 196620, 40, 0, 196621, 40, 0, 196622, 40, 0, 196623, 40, 0, 196624, 40, 0, 196625, 40, 0, 196626, 40, 0, 196627, 40, 0, 196628, 40, 0, 196629, 41, 0, 196630, 42, 0, 196631, 43, 0, 196632, 47, 0, 196633, 47, 0, 196634, 47, 0, 196635, 47, 0, 196636, 47, 0, 196637, 47, 0, 196638, 47, 0, 196639, 47, 0, 262144, 48, 0, 262145, 48, 0, 262146, 48, 0, 262147, 48, 0, 262148, 48, 0, 262149, 48, 0, 262150, 48, 0, 262151, 48, 0, 262152, 48, 0, 262153, 48, 0, 262154, 48, 0, 262155, 48, 0, 262156, 48, 0, 262157, 48, 0, 262158, 48, 0, 262159, 48, 0, 262160, 48, 0, 262161, 48, 0, 262162, 48, 0, 262163, 48, 0, 262164, 48, 0, 262165, 48, 0, 262166, 48, 0, 262167, 48, 0, 262168, 48, 0, 262169, 48, 0, 262170, 48, 0, 262171, 48, 0, 262172, 48, 0, 262173, 48, 0, 262174, 48, 0, 262175, 48, 0, 327680, 48, 0, 327681, 48, 0, 327682, 48, 0, 327683, 48, 0, 327684, 48, 0, 327685, 48, 0, 327686, 48, 0, 327687, 48, 0, 327688, 48, 0, 327689, 48, 0, 327690, 48, 0, 327691, 48, 0, 327692, 48, 0, 327693, 48, 0, 327694, 48, 0, 327695, 48, 0, 327696, 48, 0, 327697, 48, 0, 327698, 48, 0, 327699, 48, 0, 327700, 48, 0, 327701, 48, 0, 327702, 48, 0, 327703, 48, 0, 327704, 48, 0, 327705, 48, 0, 327706, 48, 0, 327707, 48, 0, 327708, 48, 0, 327709, 48, 0, 327710, 48, 0, 327711, 48, 0, 393216, 48, 0, 393217, 48, 0, 393218, 48, 0, 393219, 48, 0, 393220, 28, 0, 393221, 29, 0, 393222, 30, 0, 393223, 31, 0, 393224, 31, 0, 393225, 31, 0, 393226, 31, 0, 393227, 31, 0, 393228, 31, 0, 393229, 31, 0, 393230, 31, 0, 393231, 31, 0, 393232, 31, 0, 393233, 31, 0, 393234, 31, 0, 393235, 31, 0, 393236, 31, 0, 393237, 31, 0, 393238, 31, 0, 393239, 31, 0, 393240, 31, 0, 393241, 32, 0, 393242, 33, 0, 393243, 34, 0, 393244, 48, 0, 393245, 48, 0, 393246, 48, 0, 393247, 48, 0, 458752, 48, 0, 458753, 48, 0, 458754, 48, 0, 458755, 48, 0, 458756, 49, 0, 458779, 50, 0, 458780, 48, 0, 458781, 48, 0, 458782, 48, 0, 458783, 48, 0, 524288, 48, 0, 524289, 48, 0, 524290, 48, 0, 524291, 48, 0, 524292, 53, 0, 524315, 53, 0, 524316, 48, 0, 524317, 48, 0, 524318, 48, 0, 524319, 48, 0, 589824, 48, 0, 589825, 48, 0, 589826, 48, 0, 589827, 48, 0, 589828, 53, 0, 589851, 53, 0, 589852, 48, 0, 589853, 48, 0, 589854, 48, 0, 589855, 48, 0, 655360, 48, 0, 655361, 48, 0, 655362, 48, 0, 655363, 48, 0, 655364, 53, 0, 655387, 53, 0, 655388, 48, 0, 655389, 48, 0, 655390, 48, 0, 655391, 48, 0, 720896, 48, 0, 720897, 48, 0, 720898, 48, 0, 720899, 48, 0, 720900, 53, 0, 720923, 53, 0, 720924, 48, 0, 720925, 48, 0, 720926, 48, 0, 720927, 48, 0, 786432, 44, 0, 786433, 44, 0, 786434, 44, 0, 786435, 44, 0, 786436, 53, 0, 786459, 53, 0, 786460, 44, 0, 786461, 44, 0, 786462, 44, 0, 786463, 44, 0, 851968, 45, 0, 851969, 45, 0, 851970, 45, 0, 851971, 45, 0, 851972, 53, 0, 851995, 53, 0, 851996, 45, 0, 851997, 45, 0, 851998, 45, 0, 851999, 45, 0, 917504, 46, 0, 917505, 46, 0, 917506, 46, 0, 917507, 46, 0, 917508, 53, 0, 917531, 53, 0, 917532, 46, 0, 917533, 46, 0, 917534, 46, 0, 917535, 46, 0, 983040, 47, 0, 983041, 47, 0, 983042, 47, 0, 983043, 47, 0, 983044, 53, 0, 983067, 53, 0, 983068, 47, 0, 983069, 47, 0, 983070, 47, 0, 983071, 47, 0, 1048576, 48, 0, 1048577, 48, 0, 1048578, 48, 0, 1048579, 48, 0, 1048580, 53, 0, 1048603, 53, 0, 1048604, 48, 0, 1048605, 48, 0, 1048606, 48, 0, 1048607, 48, 0, 1114112, 48, 0, 1114113, 48, 0, 1114114, 48, 0, 1114115, 48, 0, 1114116, 53, 0, 1114139, 53, 0, 1114140, 48, 0, 1114141, 48, 0, 1114142, 48, 0, 1114143, 48, 0, 1179648, 48, 0, 1179649, 48, 0, 1179650, 48, 0, 1179651, 48, 0, 1179652, 53, 0, 1179675, 53, 0, 1179676, 48, 0, 1179677, 48, 0, 1179678, 48, 0, 1179679, 48, 0, 1245184, 48, 0, 1245185, 48, 0, 1245186, 48, 0, 1245187, 48, 0, 1245188, 53, 0, 1245211, 53, 0, 1245212, 48, 0, 1245213, 48, 0, 1245214, 48, 0, 1245215, 48, 0, 1310720, 48, 0, 1310721, 48, 0, 1310722, 48, 0, 1310723, 48, 0, 1310724, 51, 0, 1310747, 52, 0, 1310748, 48, 0, 1310749, 48, 0, 1310750, 48, 0, 1310751, 48, 0, 1376256, 48, 0, 1376257, 48, 0, 1376258, 48, 0, 1376259, 48, 0, 1376260, 37, 0, 1376261, 38, 0, 1376262, 39, 0, 1376263, 40, 0, 1376264, 40, 0, 1376265, 40, 0, 1376266, 40, 0, 1376267, 40, 0, 1376268, 40, 0, 1376269, 40, 0, 1376270, 40, 0, 1376271, 40, 0, 1376272, 40, 0, 1376273, 40, 0, 1376274, 40, 0, 1376275, 40, 0, 1376276, 40, 0, 1376277, 40, 0, 1376278, 40, 0, 1376279, 40, 0, 1376280, 40, 0, 1376281, 41, 0, 1376282, 42, 0, 1376283, 43, 0, 1376284, 48, 0, 1376285, 48, 0, 1376286, 48, 0, 1376287, 48, 0, 1441792, 48, 0, 1441793, 48, 0, 1441794, 48, 0, 1441795, 48, 0, 1441796, 48, 0, 1441797, 48, 0, 1441798, 48, 0, 1441799, 48, 0, 1441800, 48, 0, 1441801, 48, 0, 1441802, 48, 0, 1441803, 48, 0, 1441804, 48, 0, 1441805, 48, 0, 1441806, 48, 0, 1441807, 48, 0, 1441808, 48, 0, 1441809, 48, 0, 1441810, 48, 0, 1441811, 48, 0, 1441812, 48, 0, 1441813, 48, 0, 1441814, 48, 0, 1441815, 48, 0, 1441816, 48, 0, 1441817, 48, 0, 1441818, 48, 0, 1441819, 48, 0, 1441820, 48, 0, 1441821, 48, 0, 1441822, 48, 0, 1441823, 48, 0, 1507328, 48, 0, 1507329, 48, 0, 1507330, 48, 0, 1507331, 48, 0, 1507332, 48, 0, 1507333, 48, 0, 1507334, 48, 0, 1507335, 48, 0, 1507336, 48, 0, 1507337, 48, 0, 1507338, 48, 0, 1507339, 48, 0, 1507340, 48, 0, 1507341, 48, 0, 1507342, 48, 0, 1507343, 48, 0, 1507344, 48, 0, 1507345, 48, 0, 1507346, 48, 0, 1507347, 48, 0, 1507348, 48, 0, 1507349, 48, 0, 1507350, 48, 0, 1507351, 48, 0, 1507352, 48, 0, 1507353, 48, 0, 1507354, 48, 0, 1507355, 48, 0, 1507356, 48, 0, 1507357, 48, 0, 1507358, 48, 0, 1507359, 48, 0, 1572864, 48, 0, 1572865, 28, 0, 1572866, 29, 0, 1572867, 31, 0, 1572868, 31, 0, 1572869, 31, 0, 1572870, 31, 0, 1572871, 31, 0, 1572872, 31, 0, 1572873, 31, 0, 1572874, 31, 0, 1572875, 31, 0, 1572876, 31, 0, 1572877, 31, 0, 1572878, 31, 0, 1572879, 31, 0, 1572880, 31, 0, 1572881, 31, 0, 1572882, 31, 0, 1572883, 31, 0, 1572884, 31, 0, 1572885, 31, 0, 1572886, 31, 0, 1572887, 31, 0, 1572888, 31, 0, 1572889, 31, 0, 1572890, 31, 0, 1572891, 31, 0, 1572892, 31, 0, 1572893, 33, 0, 1572894, 34, 0, 1572895, 48, 0, 1638400, 48, 0, 1638401, 49, 0, 1638430, 50, 0, 1638431, 48, 0, 1703936, 48, 0, 1703937, 53, 0, 1703966, 53, 0, 1703967, 48, 0, 1769472, 48, 0, 1769473, 51, 0, 1769502, 52, 0, 1769503, 48, 0, 1835008, 48, 0, 1835009, 37, 0, 1835010, 38, 0, 1835011, 39, 0, 1835012, 40, 0, 1835013, 40, 0, 1835014, 40, 0, 1835015, 40, 0, 1835016, 40, 0, 1835017, 40, 0, 1835018, 40, 0, 1835019, 40, 0, 1835020, 40, 0, 1835021, 40, 0, 1835022, 40, 0, 1835023, 40, 0, 1835024, 40, 0, 1835025, 40, 0, 1835026, 40, 0, 1835027, 40, 0, 1835028, 40, 0, 1835029, 40, 0, 1835030, 40, 0, 1835031, 40, 0, 1835032, 40, 0, 1835033, 40, 0, 1835034, 40, 0, 1835035, 40, 0, 1835036, 41, 0, 1835037, 42, 0, 1835038, 43, 0, 1835039, 48, 0, 1900544, 48, 0, 1900545, 48, 0, 1900546, 48, 0, 1900547, 48, 0, 1900548, 48, 0, 1900549, 48, 0, 1900550, 48, 0, 1900551, 48, 0, 1900552, 48, 0, 1900553, 48, 0, 1900554, 48, 0, 1900555, 48, 0, 1900556, 48, 0, 1900557, 48, 0, 1900558, 48, 0, 1900559, 48, 0, 1900560, 48, 0, 1900561, 48, 0, 1900562, 48, 0, 1900563, 48, 0, 1900564, 48, 0, 1900565, 48, 0, 1900566, 48, 0, 1900567, 48, 0, 1900568, 48, 0, 1900569, 48, 0, 1900570, 48, 0, 1900571, 48, 0, 1900572, 48, 0, 1900573, 48, 0, 1900574, 48, 0, 1900575, 48, 0 )

[node name="top_text" type="Label" parent="."]
margin_left = 80.0
margin_top = 16.0
margin_right = 176.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "-GAME  MENU-"

[node name="game_over" type="Label" parent="."]
visible = false
margin_left = 88.0
margin_top = 104.0
margin_right = 168.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 3 )
text = "GAME  OVER"

[node name="menu_txt" type="Label" parent="."]
margin_left = 52.0
margin_top = 64.0
margin_right = 204.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 3 )

[node name="cursor" type="Sprite" parent="."]
visible = false
position = Vector2( 48, 68 )
texture = ExtResource( 4 )

[node name="txt_fade" type="Tween" parent="."]

[node name="fade" parent="." instance=ExtResource( 5 )]
position = Vector2( 128, 120 )

[node name="cursor2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="tween_completed" from="txt_fade" to="." method="_on_txt_fade_completed"]
[connection signal="fadein" from="fade" to="." method="_on_fadein"]
[connection signal="fadeout" from="fade" to="." method="_on_fadeout"]
